test/typechecker.d/invalid/main1.surc.bad
main(stdout: OutputStream) = do
	var x <- 4
	writey "whoa" , stdout 
